Correct bad path in make

--- a/blas/CMakeLists.txt
+++ b/blas/CMakeLists.txt
@@ -107,7 +107,7 @@ if(CUDA_BLAS)
             endif()
         endif()
         CUDA_ADD_LIBRARY(nd4j SHARED cuda/NativeBlas.cu cuda/NativeOps.cu)
-        target_link_libraries(nd4j ${CUDA_LIBRARIES} ${CUDA_CUBLAS_LIBRARIES} /usr/local/cuda-8.0/lib64/libcusolver.so )
+        target_link_libraries(nd4j ${CUDA_LIBRARIES} ${CUDA_CUBLAS_LIBRARIES} ${CUDA_cusolver_LIBRARY} )
         set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/cuda)
     endif(CUDA_FOUND)
 
